add validation to title apply to edit/update

--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -3,6 +3,11 @@
 
   <hr>
   <%= form_for @group do |f|  %>
+    <% if @group.errors.any? %>
+      <% @group.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+    <% end %>
     标题
     <%= f.text_field :title %>
     <br>
