--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -23,7 +23,7 @@
                 <%= link_to("My Groups", account_groups_path) %>
               </li>
               <li>
-                <%#= link_to("My Groups", account_posts_path) %>
+                <%= link_to("My Posts", account_posts_path) %>
               </li>
               <li class="divider"></li>
               <li>
